--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "public_certification_server",
   "version": "1.0.0",
-  "description": "",
+  "denpuscription": "",
   "main": "index.js",
   "scripts": {
+    "start":"node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
